<resources>
    <string name="app_name">The Transformation Company</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="autobot">Autobot</string>
    <string name="decepticon">Decepticon</string>
    <string name="skill">Skill:</string>
    <string name="firepower">Firepower:</string>
    <string name="courage">Courage:</string>
    <string name="rank">Rank:</string>
    <string name="endurance">Endurance:</string>
    <string name="intelligence">Intelligence:</string>
    <string name="strength">Strength:</string>
    <string name="add">Add</string>
    <string name="speed">Speed:</string>
    <string name="name">Name</string>
</resources>
