<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center"
        android:layout_gravity="center">
        <RadioGroup
            android:id="@+id/transformer_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:checkedButton="@id/autobot_rb">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/autobot_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autobot"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@android:color/holo_red_light"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/decepticon_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decepticon"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@android:color/holo_purple"/>
        </RadioGroup>


        <EditText
            android:id="@+id/transformer_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/strength"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/strength_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/intelligence"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/intelligence_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/speed"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/speed_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/endurance"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/endurance_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/rank"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/rank_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/courage"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/courage_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/firepower"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/firepower_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/skill"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/skill_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>